[package]
name = "pentagon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
config = "0.15.18"
dotenvy = "0.15.7"
fastrand = "2.3.0"
futures-util = "0.3.31"
hakoniwa = { version = "1.2.2", features = ["landlock", "seccomp"] }
libc = "0.2.177"
r2d2 = "0.8.10"
redis = { version = "0.32.7", features = ["aio", "r2d2", "tokio-comp"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
